# droste

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  UPGRADING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: README.md  __init__.py  browsecomp_judge.py  browsecomp_plus.py  cli.py  live.py  longbench_codeqa.py  mcp_stdio_latency.py  models.py  oolong.py  oolong_pairs.py  report.py  runner.py  scoring.py  sniah.py
benchmarks/fixtures/smoke/: direct-predictions.json  droste-predictions.json  exact-tasks.json  f1-tasks.json  numeric-tasks.json
benchmarks/manifests/: browsecomp-plus-1k-2026-07-18.json  longbench-v2-codeqa-2026-07-17.json  rlm-paper-v0.3.0-oolong-pairs.json  rlm-paper-v1-sniah-2026-07-17.json  rlm-paper-v1.json  smoke-v1.json
benchmarks/schemas/: run-artifact-v1.schema.json  suite-manifest-v1.schema.json
docs/: architecture.md  brand.md  budgets.md  mcp-http.md  mcp-stdio.md  prompt-packs.md  provider-manifests.md  recipes.md  rlm-skills.md  scaffold-manifest.md  trace-abi.md  verifiers-harness.md
docs/design/: principles.md  unified-data-sources.md  verifiers-integration.md
examples/pyodide-host/: _callback_failure_adapter.py  _close_failing_adapter.py  _failing_adapter.py  _large_event_adapter.py  _meta_precision_adapter.py  _runner_protocol_adapter.py  e2e_test.ts  pyodide_host_adapter.py  test_pyodide_host_adapter.py
infra/pypi-worker/: package.json  wrangler.toml
integrations/: README.md
integrations/openclaw/: SKILL.md
pyodide/: README.md  baseline-native-semantic.txt  bridge_source_integration_test.ts  broker.ts  broker_batch_integration_test.ts  broker_integration_test.ts  broker_test.ts  db_service_integration_test.ts  event_channel_probe.ts  event_channel_test.ts  events.ts  events_test.ts  filesystem_provider_integration_test.ts  mcp_provider_integration_test.ts  offline-probe.ts  probe_dual_sqlite.ts  provider_duplex_test.ts  pyodide_runtime.py  relay.ts  score_pyodide_parity.py  spike_topology.ts  spike_topology_result.json  stream_test.ts  verify_16_threading.ts
scripts/: publish.py
spikes/pyodide/: .gitignore  README.md  offline-probe.ts  phase1.ts  phase2.ts  phase3.ts  phase4.ts  probe.py  pyodide_runtime.py  relay.ts  run.sh  score_pyodide_parity.py  spike.ts
src/droste/: __init__.py  _lifecycle.py  capabilities.py  exceptions.py  policy.py  providers.py  redaction.py  registry.py  skills.py  structured.py
src/droste_cli/: __init__.py  auth.py  credentials.py  inputs.py  main.py
src/droste_runner/: __init__.py  __main__.py  environment.py  http_clients.py  protocol.py  run.py  runner.py  sources.py
src/droste_verifiers/: __init__.py  harness.py
src/rlm_core/: __init__.py  exceptions.py  policy.py  registry.py
src/rlm_runner/: __init__.py  runner.py
tests/: conftest.py  test_anthropic_client.py  test_auth_login.py  test_benchmarks.py  test_bridge_source.py  test_broker_budget.py  test_browsecomp_judge.py  test_budget_ledger.py  test_callback_failure_usage.py  test_capabilities.py  test_cli_inputs.py  test_data_sources.py  test_droste_cli.py  test_environment_factory.py  test_event_vocabulary.py  test_extract_fallback.py  test_filesystem_text.py  test_http_error_bodies.py  test_loop_step.py  test_mcp_http.py  test_mcp_stdio.py  test_mock_subcall_client.py  test_modelrelay_client.py  test_openai_compat_client.py  test_policy_accessors.py  test_prompt_packs.py  test_provider_lifecycle.py  test_pyodide_client.py  test_pyodide_error_serialization.py  test_pyodide_usage.py  test_raw_executor_budget.py  test_relay_assets.py  test_rlm_basic.py  test_rlm_runner_adapter.py  test_rlm_skills.py  test_runner_modules.py  test_runner_subcall_reporting.py  test_sandbox_tool_names.py  test_scaffold_manifest.py  test_source_imports.py  (+10 more)
tests/fixtures/: mcp_stdio_fixture.py  oolong-pairs-droste-terra-luna-pairs--19-values.json  scaffold_manifest_v1.json  trace-v2-lifecycle.ndjson
tests/reference_mcp/: package-lock.json  package.json
(+1001 files in other folders)
