[project]
name = "droste"
version = "0.6.0"
description = "Core RLM loop and protocols"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = []

[project.scripts]
droste = "droste_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/droste", "src/droste_runner", "src/droste_cli"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
