[project]
name = "droste"
version = "0.9.0"
description = "The recursive harness for your data — ask questions over files, folders, and SQLite with a recursive language model (RLM)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Tensor Systems" }]
keywords = ["rlm", "recursive-language-model", "llm", "agents", "map-reduce", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/tensor-systems/droste"
Repository = "https://github.com/tensor-systems/droste"
Issues = "https://github.com/tensor-systems/droste/issues"

[project.scripts]
droste = "droste_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/droste", "src/droste_runner", "src/droste_cli"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
# The runner is also an extracted standalone entrypoint: the sys.path
# bootstrap must run before package imports.
"src/droste_runner/runner.py" = ["E402"]
