[project]
name = "droste"
version = "0.15.3"
description = "Recursive analysis engine for data too large for a context window, built with Recursive Language Models (RLMs)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Tensor Systems" }]
keywords = ["rlm", "recursive-language-model", "recursive-analysis", "long-context", "data-analysis", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/tensor-systems/droste"
Repository = "https://github.com/tensor-systems/droste"
Issues = "https://github.com/tensor-systems/droste/issues"

[project.scripts]
droste = "droste_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/droste", "src/droste_runner", "src/droste_cli", "src/droste_verifiers"]

[project.optional-dependencies]
verifiers = [
    "packaging>=24.0; python_version < '3.14'",
    "renderers>=0.1.8.dev40; python_version < '3.14'",
    "verifiers==0.2.0; python_version < '3.14'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
pythonpath = ["."]
